# brewing_kettle

./: .gitmodules  README.md
docs/: brewkettle_ws_api.yaml
esp/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c6
esp/components/http_server/: CMakeLists.txt
esp/components/http_server/include/: http_server.h
esp/components/http_server/src/: http_server.c  keep_alive.c  mdns_service.c  sntp.c  sntp.h  wifi_connect.c  wifi_connect.h
esp/components/storage/: CMakeLists.txt
esp/components/storage/include/: storage.h
esp/components/storage/src/: nvs.c  sd_card.c  spiffs.c
esp/main/: CMakeLists.txt  Kconfig.projbuild  configuration.h  http_handlers.c  http_handlers.h  idf_component.yml  main.c  message_handling.c  message_handling.h  state.c  state.h  uart_messaging.c  uart_messaging.h  utilities.c  ws_message_handling.c  ws_message_handling.h
esp/main/ui/: lvgl_demo_ui.c  screen_init.c  screen_init.h
kettle_heating/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  brewkettle_heating_controller Debug.launch  brewkettle_heating_controller.ioc  build.ninja  cmake_install.cmake  compile_commands.json  kettle_heating.ioc
kettle_heating/Debug/: brewkettle_heating_controller.elf  brewkettle_heating_controller.list  brewkettle_heating_controller.map  makefile  objects.list
kettle_heating/main/: CMakeLists.txt  configuration.h  idf_component.yml  main.c  state.c  state.h  uart_messaging.c  uart_messaging.h
web/: README.md  analysis_options.yaml  l10n.yaml  pubspec.yaml
(+282 files in other folders)
